# securebase-app

./: .deploy-trigger  .env  .env.example  .env.local.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  ANALYTICS_E2E_TESTING_GUIDE.md  ANALYTICS_E2E_TEST_RESULTS.md  ANALYTICS_LAYER_QUICK_REFERENCE.md  ANALYTICS_LAYER_VERIFICATION_SUMMARY.md  ANALYTICS_MONITORING_IMPLEMENTATION.md  ANALYTICS_TESTING_QUICK_START.md  ANALYTICS_VALIDATION_SUMMARY.md  API_REFERENCE.md  BEFORE_AFTER_VISUAL.md  BLOCKER_FIXES_CHECKLIST.md  BLOCKER_FIXES_README.md  CLOUDWATCH_ANALYTICS_QUICK_REF.md  COMMANDS_QUICK_REFERENCE.md  COMPONENT2_DEPLOYMENT_SUMMARY.md  COMPONENT2_FINAL_STATUS.md  COMPONENT2_INDEX.md  COMPONENT2_QUICK_START.md  CONTRIBUTING.md  COST_FORECASTING_GUIDE.md  COST_OPTIMIZATION_PLAYBOOK.md  CUSTOMER_API_REQUIREMENTS.md  Claude.md  DASHBOARD_PORTAL_INFO.md  DAY2_SPRINT_COMPLETE.md  DEMO_BLANK_SCREEN_FIX.md  DEMO_DEPLOYMENT_CHECKLIST.md  DEMO_DEPLOYMENT_EXECUTION.md  DEMO_DEPLOYMENT_FINAL_STATUS.md  DEMO_DEPLOYMENT_SECURITY_CHECKLIST.md  DEMO_ENVIRONMENT_SETUP_UPDATED.md  DEMO_HOSTING_READINESS.md  DEMO_MARKETING_ASSESSMENT.md  DEMO_QUICK_START.md  (+312 more)
.github/: DEPLOYMENT.md  copilot-instructions-new.md  copilot-instructions.md
database/: rbac_schema.sql
docs/: ADMIN_DASHBOARD_GUIDE.md  ADMIN_DASHBOARD_SPRINT.md  ADMIN_DASHBOARD_VISUAL_DESIGN.md  ANALYTICS_API_REFERENCE.md  ANALYTICS_API_VALIDATION_GUIDE.md  ANALYTICS_DEPLOYMENT_RUNBOOK.md  ANALYTICS_LAYER_VERIFICATION.md  ANALYTICS_MONITORING_GUIDE.md  ANALYTICS_MONITORING_QUICK_REFERENCE.md  AUDIT_LOG_SCHEMA.md  (+75 more)
(+1259 files in other folders)
