[metadata]
name = securebase-app
version = 1.0.0
description = SecureBase Application - Multi-tenant Security Compliance Platform

[options]
python_requires = >=3.11
install_requires =
    boto3>=1.28.0
    psycopg2-binary>=2.9.9
    PyJWT>=2.8.0
    requests>=2.31.0
    python-dateutil>=2.8.2

[options.extras_require]
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    psycopg2-binary>=2.9.9
    moto>=4.2.0
    requests>=2.31.0
    boto3>=1.28.0
    coverage>=7.3.0
    pylint>=2.17.0
dev =
    black>=23.7.0
    flake8>=6.1.0
    pylint>=2.17.0
